--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-asgiref==3.3.1
+asgiref>=3.3.1
 django>=3.1.12
-django-markdownx==3.0.1
+django-markdownx>=3.0.1
 importlib-metadata==3.3.0
-Markdown==3.3.3
+Markdown>=3.3.3
 Pillow>=8.2.0
-pytz==2019.3
-sqlparse==0.3.0
-typing-extensions==3.7.4.3
-zipp==3.4.0
+pytz>=2019.3
+sqlparse>=0.3.0
+typing-extensions>=3.7.4.3
+zipp>=3.4.0
